<?xml version="1.0" encoding="UTF-8"?>
<!--
	Copyright The WildFly Authors
	SPDX-License-Identifier: Apache-2.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.jboss</groupId>
		<artifactId>jboss-parent</artifactId>
		<version>40</version>
	</parent>

	<groupId>org.wildfly.clustering</groupId>
	<artifactId>wildfly-clustering</artifactId>
	<version>1.0.0.Beta1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>WildFly Clustering</name>

	<scm>
		<connection>scm:git:git://github.com:wildfly-clustering/wildfly-clustering.git</connection>
		<developerConnection>scm:git:git@github.com:wildfly-clustering/wildfly-clustering.git</developerConnection>
		<url>https://github.com/wildfly-clustering/wildfly-clustering</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<jdk.runtime.args>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</jdk.runtime.args>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>

		<version.jakarta.annotation>2.1.1</version.jakarta.annotation>
		<version.jakarta.transaction>2.0.1</version.jakarta.transaction>

		<version.com.squareup.protoparser>4.0.3</version.com.squareup.protoparser>
		<version.com.github.ben-manes.caffiene>3.1.8</version.com.github.ben-manes.caffiene>
		<version.dev.failsafe>3.3.2</version.dev.failsafe>
		<version.net.jcip.annotations>1.0</version.net.jcip.annotations>
		<version.io.undertow>2.3.10.Final</version.io.undertow>
		<version.org.apache.tomcat>10.1.15</version.org.apache.tomcat>
		<version.org.infinispan>14.0.21.Final</version.org.infinispan>
		<version.org.infinispan.protostream>4.6.5.Final</version.org.infinispan.protostream>
		<version.org.jboss.logging>3.5.3.Final</version.org.jboss.logging>
		<version.org.jboss.marshalling>2.1.3.Final</version.org.jboss.marshalling>
		<version.org.jboss.threads>3.5.1.Final</version.org.jboss.threads>
		<version.org.jgroups>5.3.0.Final</version.org.jgroups>
		<version.org.junit>5.10.1</version.org.junit>
		<version.org.kohsuke.metainf-services>1.11</version.org.kohsuke.metainf-services>
		<version.org.mockito>5.8.0</version.org.mockito>
		<version.org.wildfly.common>1.7.0.Final</version.org.wildfly.common>
	</properties>

	<modules>
		<module>cache</module>
		<module>context</module>
		<module>marshalling</module>
		<module>server</module>
		<module>session</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>${project.artifactId}</artifactId>
							<version>${project.version}</version>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${jdk.runtime.args}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<trimStackTrace>false</trimStackTrace>
							<argLine>${jdk.runtime.args}</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<logViolationsToConsole>true</logViolationsToConsole>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>${version.jakarta.annotation}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.transaction</groupId>
				<artifactId>jakarta.transaction-api</artifactId>
				<version>${version.jakarta.transaction}</version>
			</dependency>

			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-cache-spi</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-cache-infinispan-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-cache-infinispan-embedded</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-cache-infinispan-remote</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-context</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-java</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-jboss</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-protostream</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-spi</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-infinispan</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-jgroups</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-local</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-spi</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-session-cache</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-session-spi</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-cache-infinispan-embedded</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-java</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-jboss</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-protostream</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-marshalling-spi</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>wildfly-clustering-server-jgroups</artifactId>
				<version>${project.version}</version>
				<classifier>tests</classifier>
			</dependency>

			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>${version.com.github.ben-manes.caffiene}</version>
			</dependency>
			<dependency>
				<groupId>com.squareup</groupId>
				<artifactId>protoparser</artifactId>
				<version>${version.com.squareup.protoparser}</version>
			</dependency>
			<dependency>
				<groupId>dev.failsafe</groupId>
				<artifactId>failsafe</artifactId>
				<version>${version.dev.failsafe}</version>
			</dependency>
			<dependency>
				<groupId>io.undertow</groupId>
				<artifactId>undertow-core</artifactId>
				<version>${version.io.undertow}</version>
			</dependency>
			<dependency>
				<groupId>net.jcip</groupId>
				<artifactId>jcip-annotations</artifactId>
				<version>${version.net.jcip.annotations}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-catalina</artifactId>
				<version>${version.org.apache.tomcat}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-client-hotrod-jakarta</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-component-annotations-jakarta</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-commons-jakarta</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-component-annotations</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-component-processor</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-core-jakarta</artifactId>
				<version>${version.org.infinispan}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-query-dsl</artifactId>
				<version>${version.org.infinispan}</version>
				<exclusions>
					<exclusion>
						<groupId>org.infinispan</groupId>
						<artifactId>infinispan-commons</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-server-testdriver-junit4</artifactId>
				<version>${version.org.infinispan.server}</version>
				<exclusions>
					<exclusion>
						<groupId>org.infinispan</groupId>
						<artifactId>infinispan-cli-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.infinispan.protostream</groupId>
				<artifactId>protostream</artifactId>
				<version>${version.org.infinispan.protostream}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan.protostream</groupId>
				<artifactId>protostream-processor</artifactId>
				<version>${version.org.infinispan.protostream}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.logging</groupId>
				<artifactId>jboss-logging</artifactId>
				<version>${version.org.jboss.logging}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.marshalling</groupId>
				<artifactId>jboss-marshalling</artifactId>
				<version>${version.org.jboss.marshalling}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.marshalling</groupId>
				<artifactId>jboss-marshalling-river</artifactId>
				<version>${version.org.jboss.marshalling}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.threads</groupId>
				<artifactId>jboss-threads</artifactId>
				<version>${version.org.jboss.threads}</version>
			</dependency>
			<dependency>
				<groupId>org.jgroups</groupId>
				<artifactId>jgroups</artifactId>
				<version>${version.org.jgroups}</version>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${version.org.junit}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.kohsuke.metainf-services</groupId>
				<artifactId>metainf-services</artifactId>
				<version>${version.org.kohsuke.metainf-services}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${version.org.mockito}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${version.org.mockito}</version>
			</dependency>
			<dependency>
				<groupId>org.wildfly.common</groupId>
				<artifactId>wildfly-common</artifactId>
				<version>${version.org.wildfly.common}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
